add live link to projects

--- a/components/AnimatedTitle/index.module.scss
+++ b/components/AnimatedTitle/index.module.scss
@@ -1,10 +1,9 @@
 @import '../../styles/mixins.scss';
 
 .title {
-
-  font-size: clamp(3rem, 9vw, 10rem);
+  font-size: clamp(3rem, 9vw, 10vw);
   // text-align: center;
   text-transform: uppercase;
   font-weight: 500;
-  overflow: hidden;
+  overflow: hidden; 
 }
