--- a/components/AnimatedProjects/Projects.module.scss
+++ b/components/AnimatedProjects/Projects.module.scss
@@ -55,29 +55,28 @@
 	grid-row-end: 3;
 	grid-column-end: 7;
 
-	font-size: 16px;
 	align-self: center;
-	line-height: 1.2;
-	font-weight: 500;
+	line-height: 1.1;
 	
+	span{
+		font-size: 18px;
+		font-weight: 400 ;
+	}
 	.para1{
 		font-size: 18px;
 		padding-bottom: 15px;
-		font-weight: 600;
-		letter-spacing: 0.4px;
+		font-weight: 500;
+		//letter-spacing: 0.2px;
 	}
 
 	.para2{
-		font-size: 18px;
+		font-size: 17px;
 		padding-bottom: 15px;
-		font-weight: 500;
+		font-weight: 400;
+		padding-top: 3px;
 		//font-style: italic;
 	}
 
-	span{
-		font-weight: 500;
-		//text-decoration: underline;
-	}
  }
 
 
@@ -89,7 +88,7 @@
 	grid-column-start: 9;
  
 	grid-row-end: 3;
-	grid-column-end: 13;
+	grid-column-end: 11;
 
 	font-size: 24px;
 	font-weight: 700;
@@ -97,7 +96,31 @@
 	margin-top: 40px;
 	margin-right: 40px;
   }
-  
+
+.cta2{
+	border: none;
+	background: none;
+
+	grid-row-start: 2;
+	grid-column-start: 11;
+
+	grid-row-end: 3;
+	grid-column-end: 13;
+	margin-top: 40px;
+	font-size: 24px;
+	font-weight: 700;
+	align-self: center;
+
+	span {
+		//padding-right: 30px;
+		text-transform: uppercase;
+	}
+	svg {
+		transform: translateX(-8px);
+		transition: all 0.3s ease;
+		margin-bottom: 3px;
+	}
+}
 .cta {
 	span {
 		//padding-right: 30px;
@@ -111,17 +134,28 @@
 		margin-bottom: 3px;
 	}
 }
-  .cta:hover {
+.cta:hover {
 	svg {
 	transform: translateX(0);
   }
 }
-  .cta:active {
+.cta:active {
   svg {
 	transform: scale(0.9);
   }
 }
-  .hover_underline_animation {
+.cta2:hover {
+	svg {
+	transform: translateX(0);
+  }
+}
+.cta2:active {
+  svg {
+	transform: scale(0.9);
+  }
+}
+
+.hover_underline_animation {
 	position: relative;
 	color: #000;
 	margin-right: 10px;
@@ -142,6 +176,10 @@
   }
   
   .cta:hover .hover_underline_animation:after {
+	transform: scaleX(1);
+	transform-origin: bottom left;
+  }
+  .cta2:hover .hover_underline_animation:after {
 	transform: scaleX(1);
 	transform-origin: bottom left;
   }
@@ -176,6 +214,12 @@
 		grid-column-start: unset;
 		grid-column-end: unset;
 		grid-row: unset;
+		font-size: 18px;
+	}
+	.cta2{
+		grid-column-start: unset;
+		grid-column-end: unset;
+		grid-row: unset;
 		margin-bottom: 15px;
 		font-size: 18px;
 	}
@@ -201,6 +245,13 @@
 		grid-column-end: unset;
 		grid-row: unset;
 		margin-bottom: 15px;
-		font-size: 18px;
+		font-size: 16px;
+	}
+	.cta2{
+		grid-column-start: unset;
+		grid-column-end: unset;
+		grid-row: unset;
+		margin-bottom: 15px;
+		font-size: 16px;
 	}
   }
