--- a/styles/pages/home.scss
+++ b/styles/pages/home.scss
@@ -1,3 +1,4 @@
+@import url('https://fonts.googleapis.com/css2?family=Inter+Tight:wght@300;400;500;600&display=swap');
 @import '../mixins.scss';
 
 .home-container {
@@ -11,8 +12,7 @@
     width: 100%;
     height: 100vh;
 
-    font-family: 'Poppins', sans-serif;
-
+    font-family: 'Inter Tight', sans-serif;
 
     .home-cover {
       display: flex;
@@ -22,12 +22,6 @@
       flex-direction: column;
       height: 100%;
       width: 100%;
-    }
-    h1 {
-      // grid-area: 3 / span 2 / 12 / span 2;
-    }
-    .copyright {
-      // grid-area: 12 / 10 / 12 / span 3;
     }
   }
 
@@ -111,6 +105,7 @@
     }
   }
 
+
   .top-scroll-wrapper {
     // position: absolute;
     // height: 28px;
@@ -166,6 +161,7 @@
     text-align: left;
     line-height: 1.3;
   }
+
 @include phone-only{
   .full-paragraph{
     font-size: 26px;
@@ -197,6 +193,22 @@
   }
 }
 
+// @include desktop-only{
+//   .experience{
+//     .company_name{
+//       font-size: 40px;
+//     }
+//     .role_time{
+//       .role{
+//         font-size: 20px;
+//       }
+//       .time{
+//         font-size: 16px;
+//       }
+//     }
+//   }
+
+// }
 @include tablets-only{
   .experience{
     .company_name{
@@ -231,3 +243,11 @@
   }
 
 }
+
+// @include desktop-only{
+//   .full-paragraph{
+//       p{
+//         font-size: 40px;
+//       }
+//   }
+// }
