--- a/components/AnimatedTitle/index.module.scss
+++ b/components/AnimatedTitle/index.module.scss
@@ -1,6 +1,7 @@
 @import '../../styles/mixins.scss';
 
 .title {
+  font-family: 'Inter Tight', sans-serif;
   font-size: clamp(3rem, 9vw, 10vw);
   // text-align: center;
   text-transform: uppercase;
