--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -1,5 +1,5 @@
 @import './mixins.scss';
-
+@import url('https://fonts.googleapis.com/css2?family=Inter+Tight:wght@300;400;500;600&display=swap');
 
 ::-moz-selection { /* Code for Firefox */
   color: transparent;
@@ -14,6 +14,7 @@
 }
 *{
   scroll-behavior: smooth !important;
+  font-family: 'Inter Tight', sans-serif;
 }
 body {
   font-family: 'Inter Tight', sans-serif;
@@ -163,3 +164,26 @@ sup{
 }
 
 
+@font-face {
+  font-family: 'InterTight';
+  src: url('../public/fonts/inter-tight/InterTight-Regular.ttf');
+  font-weight: 400;
+}
+
+@font-face {
+  font-family: 'InterTight';
+  src: url('../public/fonts/inter-tight/InterTight-Medium.ttf');
+  font-weight: 500;
+}
+
+@font-face {
+  font-family: 'InterTight';
+  src: url('../public/fonts/inter-tight/InterTight-SemiBold.ttf');
+  font-weight: 600;
+}
+
+@font-face {
+  font-family: 'InterTight';
+  src: url('../public/fonts/inter-tight/InterTight-Bold.ttf');
+  font-weight: 700;
+}
