--- a/components/AnimatedProjects/Projects.module.scss
+++ b/components/AnimatedProjects/Projects.module.scss
@@ -1,6 +1,9 @@
 @import '../../styles/mixins.scss';
 @import url('https://fonts.googleapis.com/css2?family=Inter+Tight:wght@300;400;500;600&display=swap');
 
+.main{
+	margin-bottom: 50px;
+}
 .project {
 	display: grid; 
 	grid-template-rows: 1fr 1fr;
@@ -47,7 +50,7 @@
 	grid-row-end: 2;
 	grid-column-end: 6;
 
-	font-size: 65px;
+	font-size: 55px;
 	font-weight: 800;
  }
  .description {
@@ -81,28 +84,54 @@
 		font-weight: 400;
 		padding-top: 3px;
 		//font-style: italic;
+		p{
+			display: inline-block;
+			border: 1px solid #000;
+			color: #000;
+			box-sizing: border-box;
+			border-radius: calc(0.3125 * 16px);
+			font-size: calc(0.875 * 16px);
+			font-weight: 400;
+			width: auto;
+			padding: calc(0.375 * 16px) calc(0.375 * 16px) calc(0.375 * 16px) calc(0.375 * 16px);
+			margin-right: 6px;
+		}
 	}
 
  }
 
+.container{
+	grid-row-start: 2;
+	grid-column-start: 10;
+ 
+	grid-row-end: 3;
+	grid-column-end: 13;
+	display: flex;
+	align-self: end;
+}
 
 .cta {
 	font-family: 'Inter Tight', sans-serif;
-	border: none;
-	background: none;
-	
-	grid-row-start: 2;
-	grid-column-start: 9;
- 
-	grid-row-end: 3;
-	grid-column-end: 11;
+	font-size: 20px;
+	font-weight: 400;
 
-	font-size: 24px;
-	font-weight: 700;
-	align-self: center;
-	margin-top: 40px;
-	margin-right: 40px;
-	margin-right: 10px;
+	padding-bottom: 2px;
+	margin-bottom: 18px;
+
+	span{
+		// background-color: rgb(248, 246, 246);
+		border: 1px solid black;
+		border-radius: 6px;
+		cursor: pointer;
+		transition: .4s;
+		padding: 2px 4px 2px 4px;
+		font-weight: 400;
+
+		svg{
+			margin-left: 6px;
+			padding-top: 2px;
+		}
+	}
   }
 
 .cta2{
@@ -110,91 +139,44 @@
 	border: none;
 	background: none;
 
-	grid-row-start: 2;
-	grid-column-start: 11;
+	font-size: 20px;
+	font-weight: 400;
+	align-self: end;
+	margin-bottom: 18px;
+	padding-bottom: 2px;
+	margin-left: 10px;
+	
+	span{
+		// background-color: rgb(248, 246, 246);
+		border: 1px solid black;
+		border-radius: 6px;
+		cursor: pointer;
+		transition: .4s;
+		padding: 2px 4px 2px 4px;
+		font-weight: 400;
 
-	grid-row-end: 3;
-	grid-column-end: 13;
-	margin-top: 40px;
-	font-size: 24px;
-	font-weight: 700;
-	align-self: center;
+		svg{
+			margin-left: 6px;
+			padding-top: 2px;
+		}
+	}
+}
 
-	span {
-		//padding-right: 30px;
-		text-transform: uppercase;
+
+
+.cta{
+	span:hover{
+		box-shadow: 2px 3px 0px rgb(0, 0, 0);
 	}
-	svg {
-		transform: translateX(-8px);
-		transition: all 0.3s ease;
-		margin-bottom: 3px;
-	}
-}
-.cta {
-	span {
-		//padding-right: 30px;
-		text-transform: uppercase;
-	}
-}
-.cta {
-		svg {
-		transform: translateX(-8px);
-		transition: all 0.3s ease;
-		margin-bottom: 3px;
-	}
-}
-.cta:hover {
-	svg {
-	transform: translateX(0);
-  }
-}
-.cta:active {
-  svg {
-	transform: scale(0.9);
-  }
 }
 .cta2:hover {
-	svg {
-	transform: translateX(0);
+	span {
+		box-shadow: 2px 3px 0px rgb(0, 0, 0);
   }
 }
-.cta2:active {
-  svg {
-	transform: scale(0.9);
-  }
-}
-
-.hover_underline_animation {
-	position: relative;
-	color: #000;
-	margin-right: 10px;
-  }
-  
-  .hover_underline_animation:after {
-	content: "";
-	position: absolute;
-	width: 100%;
-	transform: scaleX(0);
-	height: 2px;
-	bottom: 0;
-	left: 0;
-	background-color: #000000;
-	transform-origin: bottom right;
-	transition: transform 0.25s ease-out;
-	
-  }
-  
-  .cta:hover .hover_underline_animation:after {
-	transform: scaleX(1);
-	transform-origin: bottom left;
-  }
-  .cta2:hover .hover_underline_animation:after {
-	transform: scaleX(1);
-	transform-origin: bottom left;
-  }
 
   .more{
-	font-weight: 600;
+	font-weight: 500;
 	font-size: 22px;
 	//margin-top: 50px;
 	text-align: center;
@@ -220,17 +202,24 @@
 		grid-row: unset;
 	}
 	.cta{
-		grid-column-start: unset;
-		grid-column-end: unset;
-		grid-row: unset;
 		font-size: 18px;
+
 	}
 	.cta2{
+
+		margin-bottom: 15px;
+		font-size: 18px;
+
+	}
+	.para2{
+		p{
+			margin-top: 8px;
+		}
+	}
+	.container{
 		grid-column-start: unset;
 		grid-column-end: unset;
 		grid-row: unset;
-		margin-bottom: 15px;
-		font-size: 18px;
 	}
   }
 
@@ -250,17 +239,22 @@
 		grid-row: unset;
 	}
 	.cta{
-		grid-column-start: unset;
-		grid-column-end: unset;
-		grid-row: unset;
+
 		margin-bottom: 15px;
 		font-size: 16px;
 	}
 	.cta2{
-		grid-column-start: unset;
-		grid-column-end: unset;
-		grid-row: unset;
+
 		margin-bottom: 15px;
 		font-size: 16px;
 	}
+	.container{
+		grid-column-start: unset;
+		grid-column-end: unset;
+		grid-row: unset;
+	}
+  }
+
+  @include low-res {
+
   }
