--- a/components/Skills/Skills.module.scss
+++ b/components/Skills/Skills.module.scss
@@ -1,32 +1,33 @@
 @import '../../styles/mixins.scss';
 
 
-.parent {
-    margin-top: 40px;
-    display: grid;
-    grid-template-columns: repeat(12, 1fr);
-    grid-template-rows: 1fr;
-    grid-column-gap: 0px;
-    grid-row-gap: 0px;
-        h3{
-            font-size: 30px;
-            font-weight: 700;
-            margin-bottom: 28px;
-            grid-column-start: 1;
-            grid-column-end: 3;
+    .skills {
+        display: grid;
+        grid-template-columns: repeat(12,1fr);
+        gap: 24px;
+        height: auto;
+        align-items: center;
+        border-top: 1px solid #000;
+        padding-top: 16px;
+        padding-bottom: 16px;
+        //border-bottom: 1px solid #000;
+        //margin-top: 10px;
+        //padding-bottom: 30px;
+    
+        .side{
+          font-size: 30px;
+          grid-column-start: 1;
+          grid-column-end: 4;
+          font-weight: 600;
+          
         }
-    }
 
-    .div1 {
-        font-size: 28px;
-        grid-column-start: 1;
-        grid-column-end: 2;
-        line-height: 1.5;
-    }
-    .div2 {
+      }
+
+      .div2 {
         font-size: 20px;
         grid-column-start: 4;
-        grid-column-end: 12;
+        grid-column-end: 13;
 
         ul{
             display: flex;
@@ -41,22 +42,29 @@
         }
         
     }
-    
-    #backend{
-        margin-top: 15px;
+
+    #other{
+        border-bottom: 1px solid #000;
     }
-
-    @include phone-only {
-        .parent{
-            display: block;
-            
-            .div2{
-                padding-bottom: 10px;
-                ul{
-                    padding-top: 10px;
-                    display: block;
-                }
+    @include phone-only{
+        .skills{
+          display: block;
+          padding-top: 20px;
+          margin-bottom: 20px;
+          .company_name{
+            font-size: 26px;
+            padding-bottom: 10px;
+          }
+          .side{
+            font-size: 24px;
+          }
+          .div2{
+            font-size: 16px;
+            ul{
+                display: flex;
+                margin-top: 1.5rem;
+                flex-wrap: wrap;
             }
+          }
         }
-
     }
