--- a/styles/pages/home.scss
+++ b/styles/pages/home.scss
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=Inter+Tight:wght@300;400;500;600&display=swap');
+// @import url('https://fonts.googleapis.com/css2?family=Inter+Tight:wght@300;400;500;600&display=swap');
 @import '../mixins.scss';
 
 .home-container {
@@ -12,7 +12,7 @@
     width: 100%;
     height: 100vh;
 
-    font-family: 'Inter Tight', sans-serif;
+    //font-family: 'Inter Tight', sans-serif;
 
     .home-cover {
       display: flex;
