--- a/components/AnimatedProjects/Projects.module.scss
+++ b/components/AnimatedProjects/Projects.module.scss
@@ -83,12 +83,12 @@
 			border: 1px solid #000;
 			color: #000;
 			box-sizing: border-box;
-			border-radius: calc(0.3125 * 16px);
+			border-radius: 30px;
 			font-size: calc(0.875 * 16px);
 			font-weight: 400;
 			width: auto;
-			padding: calc(0.375 * 16px) calc(0.375 * 16px) calc(0.375 * 16px) calc(0.375 * 16px);
-			margin-right: 6px;
+			padding: calc(0.375 * 16px) calc(0.375 * 20px) calc(0.375 * 16px) calc(0.375 * 20px);
+			margin-right: 4px;
 		}
 	}
 
@@ -114,10 +114,10 @@
 	span{
 		// background-color: rgb(248, 246, 246);
 		border: 1px solid black;
-		border-radius: 6px;
+		border-radius: 30px;
 		cursor: pointer;
 		transition: .4s;
-		padding: 2px 4px 2px 4px;
+		padding: 3px 8px 3px 8px;
 		font-weight: 400;
 
 		svg{
@@ -136,15 +136,15 @@
 	align-self: end;
 	margin-bottom: 18px;
 	padding-bottom: 2px;
-	margin-left: 10px;
+	margin-left: 8px;
 	
 	span{
 		// background-color: rgb(248, 246, 246);
 		border: 1px solid black;
-		border-radius: 6px;
+		border-radius: 30px;
 		cursor: pointer;
 		transition: .4s;
-		padding: 2px 4px 2px 4px;
+		padding: 3px 8px 3px 8px;
 		font-weight: 400;
 
 		svg{
@@ -195,13 +195,18 @@
 	}
 	.cta{
 		font-size: 18px;
+		span{
+			svg{
+				padding-top: 5px;
+			}
+		}
 
 	}
 	.cta2{
 
 		margin-bottom: 15px;
 		font-size: 18px;
-
+		margin-left: 5px;
 	}
 	.para2{
 		p{
@@ -213,6 +218,7 @@
 		grid-column-end: unset;
 		grid-row: unset;
 	}
+
   }
 
   @include tablets-only{
@@ -231,12 +237,17 @@
 		grid-row: unset;
 	}
 	.cta{
-
+		
 		margin-bottom: 15px;
 		font-size: 16px;
+		span{
+			svg{
+				padding-top: 5px;
+			}
+		}
 	}
 	.cta2{
-
+		margin-left: 5px;
 		margin-bottom: 15px;
 		font-size: 16px;
 	}
