--- a/components/Contact/Contact.module.scss
+++ b/components/Contact/Contact.module.scss
@@ -41,11 +41,16 @@
     font-size: 24px;
     border: 1px solid #000;
     border-radius: 36px;
-    padding: 0 34px;
+    padding: 18px 34px;
     height: 36px;
     display: inline-flex;
     justify-content: center;
     align-items: center;
+    transition: .4s;
+  }
+
+  .copy_email:hover{
+    box-shadow: 2px 3px 0px rgb(0, 0, 0);
   }
 
   @include phone-only{
