--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -121,12 +121,90 @@ sup{
   flex-direction: row-reverse;
   gap: 10px;
   padding: 50px;
-
   line-height: 1em;
   z-index: 1;
 
   a:hover{
     color: #000;
+  }
+}
+.infos{
+  color: #000;
+  position: absolute;
+  font-size: 16px;
+  display: flex;
+  gap: 6px;
+  padding: 50px;
+  z-index: 1;
+}
+.parent {
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
+  grid-template-rows: 1fr;
+  grid-column-gap: 0px;
+  grid-row-gap: 0px;
+}
+
+.blob {
+	background: rgb(0,0,0);
+	border-radius: 50%;
+  margin-top: 5px;
+	height: 7px;
+	width: 7px;
+  margin-right: 6px;
+	box-shadow: 0 0 0 0 rgba(0,0,0, 0.8);
+	transform: scale(1);
+	animation: pulse 1s infinite;
+}
+
+
+@keyframes pulse {
+	0% {
+		transform: scale(0.95);
+		box-shadow: 0 0 0 0 rgba(0,0,0, 0.7);
+	}
+
+	70% {
+		transform: scale(1);
+		box-shadow: 0 0 0 5px rgba(0,0,0, 0);
+	}
+
+	100% {
+		transform: scale(0.95);
+		box-shadow: 0 0 0 0 rgba(0,0,0, 0);
+	}
+}
+
+.infocontainer{
+  display: flex;
+  color:black;
+  padding: 7px 12px 7px 12px;
+  border-radius: 30px;
+  background: rgb(137, 207, 240, 0.6);
+}
+
+.infotext{
+  letter-spacing: 0.1px;
+  color: black;
+}
+
+@include phone-only {
+
+  .parent{
+    justify-items: center;
+  }
+  .infos{
+    padding: 10px;
+    font-size: 12px;
+  }
+  .blob {
+    margin-top: 3px;
+    height: 6px;
+    width: 6px;
+  }
+
+  .infocontainer{
+    padding: 6px 12px 6px 12px;
   }
 }
 
