--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -131,7 +131,7 @@ sup{
 .infos{
   color: #000;
   position: absolute;
-  font-size: 16px;
+  font-size: 17px;
   display: flex;
   gap: 6px;
   padding: 50px;
@@ -146,13 +146,13 @@ sup{
 }
 
 .blob {
-	background: rgb(0,0,0);
+	background: rgb(17, 171, 243);
 	border-radius: 50%;
   margin-top: 5px;
 	height: 7px;
 	width: 7px;
   margin-right: 6px;
-	box-shadow: 0 0 0 0 rgba(0,0,0, 0.8);
+	box-shadow: 0 0 0 0 rgba(17, 171, 243, 0.8);
 	transform: scale(1);
 	animation: pulse 1s infinite;
 }
@@ -161,17 +161,17 @@ sup{
 @keyframes pulse {
 	0% {
 		transform: scale(0.95);
-		box-shadow: 0 0 0 0 rgba(0,0,0, 0.7);
+		box-shadow: 0 0 0 0 rgba(17, 171, 243, 0.7);
 	}
 
 	70% {
 		transform: scale(1);
-		box-shadow: 0 0 0 5px rgba(0,0,0, 0);
+		box-shadow: 0 0 0 6px rgba(17, 171, 243, 0);
 	}
 
 	100% {
 		transform: scale(0.95);
-		box-shadow: 0 0 0 0 rgba(0,0,0, 0);
+		box-shadow: 0 0 0 0 rgba(17, 171, 243, 0);
 	}
 }
 
@@ -180,12 +180,12 @@ sup{
   color:black;
   padding: 7px 12px 7px 12px;
   border-radius: 30px;
-  background: rgb(137, 207, 240, 0.6);
+  background: rgb(137, 207, 240, 0.2);
 }
 
 .infotext{
   letter-spacing: 0.1px;
-  color: black;
+  color: rgb(4, 71, 102);
 }
 
 @include phone-only {
