--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -105,7 +105,7 @@ sup{
     justify-content: center;
     font-size: 18px;
     position: fixed;
-    font-weight: 500;
+    font-weight: 400;
   }
 }
 
@@ -116,7 +116,7 @@ sup{
   top: 0;
   left: 0;
   width: 100vw;
-
+  font-weight: 400;
   display: flex;
   flex-direction: row-reverse;
   gap: 10px;
@@ -131,7 +131,7 @@ sup{
 .infos{
   color: #000;
   position: absolute;
-  font-size: 17px;
+  font-size: 14px;
   display: flex;
   gap: 6px;
   padding: 50px;
@@ -146,46 +146,31 @@ sup{
 }
 
 .blob {
-	background: rgb(17, 171, 243);
+  background: rgba(170, 255, 0, 1);
 	border-radius: 50%;
-  margin-top: 5px;
-	height: 7px;
-	width: 7px;
-  margin-right: 6px;
-	box-shadow: 0 0 0 0 rgba(17, 171, 243, 0.8);
+	height: 8px;
+	width: 8px;
 	transform: scale(1);
-	animation: pulse 1s infinite;
+	animation: fadeIn 1s infinite alternate;
 }
 
-
-@keyframes pulse {
-	0% {
-		transform: scale(0.95);
-		box-shadow: 0 0 0 0 rgba(17, 171, 243, 0.7);
-	}
-
-	70% {
-		transform: scale(1);
-		box-shadow: 0 0 0 6px rgba(17, 171, 243, 0);
-	}
-
-	100% {
-		transform: scale(0.95);
-		box-shadow: 0 0 0 0 rgba(17, 171, 243, 0);
-	}
+@keyframes fadeIn { 
+  from { opacity: 0.1; } 
 }
 
 .infocontainer{
   display: flex;
-  color:black;
-  padding: 7px 12px 7px 12px;
+  align-items: center;
+  gap: 4px;
+  padding: 8px 12px 8px 12px;
   border-radius: 30px;
-  background: rgb(137, 207, 240, 0.2);
+  background: rgba(0, 0, 0, 0.8);
 }
 
 .infotext{
-  letter-spacing: 0.1px;
-  color: rgb(4, 71, 102);
+  letter-spacing: 0.5px;
+  color: rgba(240,241,242, 0.9);
+  font-weight: 400;
 }
 
 @include phone-only {
@@ -198,7 +183,6 @@ sup{
     font-size: 12px;
   }
   .blob {
-    margin-top: 3px;
     height: 6px;
     width: 6px;
   }
@@ -254,6 +238,7 @@ sup{
   &.as-visible {
     opacity: 1;
   }
+
 }
 
 
