--- a/styles/pages/home.scss
+++ b/styles/pages/home.scss
@@ -3,7 +3,7 @@
 
 .home-container {
   // color: #30312f ;
-  color: #000;
+  color: #1a1a1a;
   // mix-blend-mode: difference;
   background-color: #F0F1F2;
   padding: 0 50px;
@@ -58,7 +58,7 @@
     gap: 24px;
     height: 100px;
     align-items: center;
-    border-top: 1px solid #000;
+    border-top: 1px solid #1a1a1a;
     //border-bottom: 1px solid #000;
     //margin-top: 10px;
     //padding-bottom: 30px;
