--- a/components/Contact/Contact.module.scss
+++ b/components/Contact/Contact.module.scss
@@ -46,7 +46,7 @@
     margin-top: 30px;
     margin-bottom: 200px;
     font-size: 24px;
-    border: 1px solid #000;
+    border: 1px solid #1a1a1a;
     border-radius: 36px;
     padding: 18px 34px;
     height: 36px;
@@ -57,7 +57,7 @@
   }
 
   .copy_email:hover{
-    box-shadow: 2px 4px 0px rgb(0, 0, 0);
+    box-shadow: 2px 4px 0px rgb(26, 26, 26);
   }
 
   @include phone-only{
