--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -146,7 +146,7 @@ sup{
 }
 
 .blob {
-  background: rgba(170, 255, 0, 1);
+  background: #D7FE52;
 	border-radius: 50%;
 	height: 8px;
 	width: 8px;
