fixes in mobile

--- a/components/AnimatedProjects/Projects.module.scss
+++ b/components/AnimatedProjects/Projects.module.scss
@@ -189,8 +189,10 @@
 		grid-column-start: unset;
 		grid-column-end: unset;
 		grid-row: unset;
+		margin-top: -30px;
 	}
 	.description{
+		margin-top: -30px;
 		grid-column-start: unset;
 		grid-column-end: unset;
 		grid-row: unset;
@@ -219,6 +221,7 @@
 		grid-column-start: unset;
 		grid-column-end: unset;
 		grid-row: unset;
+		padding-bottom: 10px;
 	}
 
   }
