--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -98,17 +98,6 @@ sup{
   
 }
 
-@include phone-only {
-  .nav-bar{
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    font-size: 18px;
-    position: fixed;
-    font-weight: 400;
-  }
-}
-
 .nav-bar {
   color: #1a1a1a;
   position: fixed;
@@ -173,14 +162,91 @@ sup{
   font-weight: 400;
 }
 
+.burger-menu {
+  display: none;/* Hide the burger menu on larger screens */
+  .bar {
+    background: #1a1a1a;
+    border-radius: 15px;
+    height: 1px;
+    width: 30px;
+    margin-bottom: 6px;
+    transition: gap 200ms ease-in-out;
+    &:first-child {
+      transform-origin: top-left;
+    }
+
+    &:last-child {
+      transform-origin: bottom-left;
+    }
+  }
+
+  &.open {
+    .bar {
+      background: #fff; /* Set the color to white when the menu is open */
+      transition: transform 400ms ease-in-out;
+    }
+    .bar:first-child {
+      transform: rotate(45deg) translateX(13px);
+    }
+
+    .bar:nth-child(2) {
+      opacity: 0;
+    }
+
+    .bar:last-child {
+      transform: rotate(-45deg) translateX(13px);
+    }
+  }
+}
+.mobile_name{
+  font-size: 28px;
+  color: #fff;
+  margin-bottom: 50px;
+}
+.mobile-menu {
+  position: fixed;
+  top: 0;
+  right: 0;
+  height: 100vh;
+  width: 70%;
+  background: #1a1a1a;
+  z-index: 2;
+  padding: 50px;
+  display: flex;
+  flex-direction: column;
+  gap: 20px;
+
+  ul {
+    list-style: none;
+    padding: 0;
+    margin: 0;
+    font-size: 24px;
+    text-align: left;
+
+    li {
+      margin-bottom: 20px;
+      font-weight: 500;
+    }
+
+    a {
+      color: #fff;
+      text-decoration: none;
+      &:hover {
+        color: #D7FE52;
+      }
+    }
+  }
+}
+
+
 @include phone-only {
 
   .parent{
-    justify-items: center;
+    //justify-items: left;
   }
   .infos{
-    padding: 10px;
-    font-size: 12px;
+    padding: 28px 15px;
+    font-size: 15px;
   }
   .blob {
     height: 6px;
@@ -189,6 +255,29 @@ sup{
 
   .infocontainer{
     padding: 6px 12px 6px 12px;
+  }
+  .nav-bar{
+    display: none;
+  }
+
+  .burger-menu {
+    display: block;
+    cursor: pointer;
+    position: fixed;
+    top: 30px;
+    right: 30px;
+    z-index: 3;
+
+    .bar {
+      background: #1a1a1a;
+      height: 3px;
+      width: 28px;
+      margin-bottom: 6px;
+    }
+  }
+
+  .mobile-menu {
+    width: 95%;
   }
 }
 
@@ -239,7 +328,17 @@ sup{
   }  
 }
 
-
+@include phone-only{
+  .home-container{
+    padding: 0 30px!important;
+  }
+  .secondary-cursor {
+    display: none;
+  }
+  .inside-container{
+    margin-top: -250px;
+  }
+}
 
 @font-face {
   font-family: 'InterTight';
