--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -122,7 +122,7 @@ sup{
 .sub-nav{
   display: flex;
   flex-direction: row-reverse;
-  gap: 20px;
+  gap: 15px;
 }
 .menu_link {
   position: relative;
@@ -300,7 +300,9 @@ sup{
   .nav-bar{
     display: none;
   }
-
+  .infotext{
+    letter-spacing: 0.1px;
+  }
   .burger-menu {
     display: block;
     cursor: pointer;
@@ -356,8 +358,8 @@ sup{
 
   position: fixed;
   pointer-events: none;
-  width: 120px;
-  height: 120px;
+  width: 110px;
+  height: 110px;
   background-color: #F0F1F2;
   mix-blend-mode: difference;
   left: 0;
