--- a/styles/pages/home.scss
+++ b/styles/pages/home.scss
@@ -156,9 +156,10 @@
   }
 
   .full-paragraph {
-    font-size: 34px;
+    font-size: 30px;
     text-align: left;
     line-height: 1.3;
+    font-weight: 400;
   }
 
 @include phone-only{
@@ -170,7 +171,7 @@
     bottom: 200px!important;
   }
   .full-paragraph{
-    font-size: 26px;
+    font-size: 24px;
     line-height: 1.2;
   }
   .experience{
