--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -31,12 +31,31 @@ li {
   padding: 0;
   margin: 0;
   font-family: 'Inter Tight', sans-serif;
+  scrollbar-width: thin;
+  scrollbar-color: rgba(26, 26, 26, 0.9) rgba(0, 0, 0, 0.1);
 }
 
 // *{
 //   scroll-behavior: smooth !important;
 
 // }
+/* Target all scrollbars */
+::-webkit-scrollbar {
+  width: 10px; /* Set scrollbar width */
+  height: 8px; /* Set scrollbar height */
+}
+
+/* Target the scrollbar thumb (draggable part) */
+::-webkit-scrollbar-thumb {
+  background-color: rgba(26, 26, 26, 0.9); /* Set thumb color */
+  border-radius: 30px; /* Add rounded corners */
+}
+
+/* Target the scrollbar track */
+::-webkit-scrollbar-track {
+  background-color: rgba(0, 0, 0, 0.1); /* Set track color */
+}
+
 
 sup{
   font-size: 70%;
@@ -376,7 +395,7 @@ sup{
     height: 80px;
     background-color: #000;
     mix-blend-mode: normal;
-    opacity: 0.95;
+    opacity: 0.8;
   }
   &.menuhover{
     width: 0px;
@@ -400,7 +419,7 @@ sup{
     height: 80px;
     background-color: #000;
     mix-blend-mode: normal;
-    opacity: 0.95;
+    opacity: 0.8;
   }
   .view-text {
     display: flex;
@@ -413,7 +432,7 @@ sup{
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
-    color: #F0F1F2;
+    color: #D7FE52;
   }
 }
 
