--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -30,7 +30,7 @@ ul,
 li {
   padding: 0;
   margin: 0;
-  font-family: 'Inter Tight', sans-serif;
+  font-family: InterTight,-apple-system,BlinkMacSystemFont,Segoe UI,Roboto,Oxygen,Ubuntu,Cantarell,Fira Sans,Droid Sans,Helvetica Neue,sans-serif;
   scrollbar-width: thin;
   scrollbar-color: rgba(26, 26, 26, 0.85) rgba(0, 0, 0, 0.1);
 }
