--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -405,7 +405,7 @@ sup{
     display: flex;
     align-items: center;
     justify-content: center;
-    font-size: 30px;
+    font-size: 16px;
     font-weight: 400;
     /* Optionally, adjust positioning for better alignment within the cursor */
     position: absolute;
@@ -432,7 +432,7 @@ sup{
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
-    color: #D7FE52;
+    color: #F0F1F2;
   }
 }
 
